add:add login&userListComponet

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,9 +1,9 @@
 :root {
   --max-width: 1100px;
   --border-radius: 12px;
-  --font-mono: ui-monospace, Menlo, Monaco, 'Cascadia Mono', 'Segoe UI Mono',
-    'Roboto Mono', 'Oxygen Mono', 'Ubuntu Monospace', 'Source Code Pro',
-    'Fira Mono', 'Droid Sans Mono', 'Courier New', monospace;
+  --font-mono: ui-monospace, Menlo, Monaco, "Cascadia Mono", "Segoe UI Mono", "Roboto Mono",
+    "Oxygen Mono", "Ubuntu Monospace", "Source Code Pro", "Fira Mono", "Droid Sans Mono",
+    "Courier New", monospace;
 
   --foreground-rgb: 0, 0, 0;
   --background-start-rgb: 214, 219, 220;
@@ -17,10 +17,7 @@
     #0071ff33 160deg,
     transparent 360deg
   );
-  --secondary-glow: radial-gradient(
-    rgba(255, 255, 255, 1),
-    rgba(255, 255, 255, 0)
-  );
+  --secondary-glow: radial-gradient(rgba(255, 255, 255, 1), rgba(255, 255, 255, 0));
 
   --tile-start-rgb: 239, 245, 249;
   --tile-end-rgb: 228, 232, 233;
@@ -85,16 +82,6 @@ body {
   overflow-x: hidden;
 }
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
-}
-
 a {
   color: inherit;
   text-decoration: none;
@@ -104,4 +91,54 @@ a {
   html {
     color-scheme: dark;
   }
+}
+
+:where(.css-dev-only-do-not-override-190m0jy).ant-input-affix-wrapper > input.ant-input {
+  padding: 0;
+  font-size: inherit;
+  border: none;
+  border-radius: 0;
+  outline: none;
+  height: 32px !important;
+}
+:where(.css-dev-only-do-not-override-190m0jy).ant-btn-primary {
+  color: #fff;
+  background-color: blueviolet !important;
+  box-shadow: 0 2px 0 rgba(5, 145, 255, 0.1);
+}
+:where(.css-dev-only-do-not-override-190m0jy).ant-input:hover {
+  border-color: blueviolet !important;
+  border-inline-end-width: 1px;
+}
+:where(.css-dev-only-do-not-override-190m0jy).ant-input:focus,
+:where(.css-dev-only-do-not-override-190m0jy).ant-input-focused {
+  border-color: blueviolet !important;
+  box-shadow: 0 0 0 2px rgba(5, 145, 255, 0.1);
+  border-inline-end-width: 1px;
+  outline: 0;
+}
+:where(.css-dev-only-do-not-override-190m0jy).ant-input:hover {
+  border-color: blueviolet !important;
+  border-inline-end-width: 1px;
+}
+input:focus,
+:where(.css-dev-only-do-not-override-190m0jy).ant-input-focused {
+  border-color: blueviolet !important;
+  box-shadow: 0 0 0 2px rgba(5, 145, 255, 0.1);
+  border-inline-end-width: 1px;
+  outline: 0;
+}
+:where(.css-dev-only-do-not-override-190m0jy).ant-input-affix-wrapper:focus,
+:where(.css-dev-only-do-not-override-190m0jy).ant-input-affix-wrapper-focused {
+  border-color: blueviolet !important;
+  box-shadow: 0 0 0 2px rgba(5, 145, 255, 0.1);
+  border-inline-end-width: 1px;
+  outline: 0;
+}
+:where(.css-dev-only-do-not-override-190m0jy).ant-input-affix-wrapper:not(
+    .ant-input-affix-wrapper-disabled
+  ):hover {
+  border-color: blueviolet !important;
+  border-inline-end-width: 1px;
+  z-index: 1;
 }
