--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -8,3 +8,9 @@
 
   background-image: linear-gradient(to right, #9796f0, #fbc7d4);
 }
+.Spin {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
